# plurigrep

./: Cargo.toml  ChangeLog.md  LICENSE  README.md  package.yaml  plurigrep.cabal
app/: Main.hs
src/: main.rs
